# retayn

./: DEVELOP.rst  HISTORY.rst  README.rst  pyproject.toml
docs/: conf.py  index.rst  sources.rst
retayn/: cli.py  config.py  exercises.py  utils.py
tests/: test_cli.py  test_exercises.py  test_testing.py  utils.py
tests/assets/mock_exercise/: content.tex.j2  main.py  meta.yml  solution.tex.j2
